First strain gauge implementations; currently reads no actual value, mock setup.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,14 +6,14 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "make -C ./build",
+            "command": "cmake --build ./build",
             "group": "build",
             "problemMatcher": []
         },
         {
             "label": "run",
             "type": "shell",
-            "command": "mode COM3:1200; make flash -C ./build; putty -serial COM3 -sercfg 8,1,19200;",
+            "command": "mode COM9:1200; cmake --build ./build --target flash; putty -serial COM9 -sercfg 8,1,19200;",
             "group": "none",
             "problemMatcher": []
         },
